# aps-mlir

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  aps-frontend  megg-opt  megg-opt.py  pixi.toml
aps-prog/: Makefile  README.md
aps-prog/riscv-fesvr/: aclocal.m4
aps-prog/src/: Makefile
cadl_frontend/: __init__.py  ast.py  debug.py  grammar.lark  loop_transform.py  mlir_converter.py  parser.py  transpile_to_c.py
cmake/: FindLPSOLVE.cmake
docker/: Dockerfile  build.sh  run.sh
docs/: README.md
docs/ARCHITECTURE/: README.md  aps-itfc.md  deployment.md  dma-engine.md
docs/COMPILER/: README.md  egraph-architecture.md  pattern-matching.md
docs/SYNTHESIS/: README.md  cadl-language.md  hls-passes.md  scheduling.md
examples/: resource.json  resource_ihp130.json  zyy.cadl
examples/aspdac_tutorial/: convert.py  gemm_128x128.c  gemm_example.c  run_tutorial.sh  transpose.cadl  tutorial.cadl  tutorial_gemm.c  vector.cadl  verify_gemm.py  verify_gemv.py
examples/debug/: burst_demo.cadl  burst_demo_with_count.cadl  crc8.cadl  debug_usage_example.py  let_type_test.cadl  mem_full_test.cadl  mem_inside_for.cadl  mem_outside_for_affine.cadl  mlir_demo.py  raise_while_to_for.cadl  regfile_test.cadl  rocc_mem_smoke.cadl  select_example.cadl  simple.cadl  simple_test.cadl  sram_test.cadl  test_annotation.cadl  test_array_add.cadl  test_comparisons.cadl  test_global_scalars.cadl  test_mixed_globals.cadl  test_multiple_returns.cadl  test_nested_loops.cadl  test_scalar_only.cadl  test_signedness.cadl  tuple_test.cadl  type_convert.cadl  type_convert_signed.cadl  usage_example.py
examples/deca/: deca_all_i16.cadl  deca_decompress_nested_unroll.cadl  gemm.cadl  test_deca_decompress.c  test_deca_e2e_opt.c  test_gemm.c
examples/diff_match/: README.md
examples/match_cases/: README.md
examples/pcl/: pcl_all.cadl  pcl_e2e_wide.c  run_all.sh  test_v3ddist_vv.c  test_vcovmat3d_vs.c  test_vfpsmax.c  test_vgemv3d.c  v3ddist_vv.cadl  vcovmat3d_vs.cadl  vfpsmax.cadl  vgemv3d.cadl
examples/wont_pass/: README.md  empty_constructs.cadl  invalid_attributes.cadl  invalid_identifiers.cadl  invalid_statements.cadl  invalid_syntax.cadl  invalid_types.cadl  let_without_type.cadl  malformed_expressions.cadl  malformed_literals.cadl  mismatched_brackets.cadl  missing_semicolon.cadl  mixed_errors.cadl  unterminated_strings.cadl
include/: CMakeLists.txt
include/APS/: APS.td  APSDialect.h  APSDialect.td  APSOps.h  APSOps.td  APSToCMT2.h  BBHandler.h  BlockHandler.h  CMakeLists.txt  LoopHandler.h  PassDetail.h  Passes.h  Passes.td
include/Schedule/: CDFG.h  DbgHelper.h  ResourceDB.h  SDCSchedule.h  SDCSolver.h  ScheduleAlgo.h
include/TOR/: AccessDependence.h  AffineModSimplify.h  CMakeLists.txt  DependenceAnalysis.h  DialectCreater.h  GenTimegraph.h  PassDetail.h  Passes.h  Passes.td  SCEVAnalysis.h  TOR.h  TOR.td  TORAttrs.h  TORAttrs.td  TORDialect.h  TORDialect.td  TORExpr.td  TORStmt.td  TORTypes.h  TORTypes.td  Timegraph.h  UnrollUtils.h  Utils.h
lib/: CMakeLists.txt
lib/APS/: APSHoistReadRF.cpp  APSMemToMemRef.cpp  APSScalarMemToGlobal.cpp  APSSplitMemoryOpsPass.cpp  AffineMemToAPSMem.cpp  CMakeLists.txt  InferAffineMemAccess.cpp  InferAffineMemAccessNew.cpp  MemLoadDuplication.cpp  MemRefToAPSMem.cpp  MemoryMapPass.cpp  aps.cpp  (+1 more)
lib/Schedule/: CDFG.cpp  CMakeLists.txt  SDCSchedule.cpp  SDCSolver.cpp  ScheduleAlgo.cpp
lib/TOR/: AffineModSimplify.cpp  ArrayOpt.cpp  CMakeLists.txt  ConvertInput.cpp  CountCycles.cpp  DependenceAnalysis.cpp  ExpressionBalance.cpp  HlsUnroll.cpp  LoopTripcount.cpp  LowerAffineFor.cpp  MinMaxToCmpSelectPass.cpp  NewArrayPartition.cpp  NormalizeMemrefIndices.cpp  RaiseToAffine.cpp  ReinterpretCastLower.cpp  SCEVAnalysis.cpp  SCFDump.cpp  SCFIterArgs.cpp  SCFToTOR.cpp  TOR.cpp  TORAttrs.cpp  TORDialect.cpp  TORDump.cpp  TORFuse.cpp  TORSchedulePass.cpp  TORSplitPass.cpp  TORTimeGraphPass.cpp  TORTypes.cpp
scripts/: compile.sh  mlir-std.sh  setup-individual-failed.sh  setup-ortools.sh  setup-yosys-slang.sh  setup.sh  strip_mlir_attrs.py
tests/: test_select_expr.py  test_transpile_to_c.py
tools/: CMakeLists.txt
tools/aps-opt/: CMakeLists.txt  aps_opt.cc  aps_opt.hpp  aps_opt_driver.cc  main.cc
tutorial/: a1-ex1synth.sh  a2-ex1compile.sh  a3-ex1objdump.sh  a4-ex1native.sh  a5-ex1nativesim.sh  a6-ex1sim.sh  a7-ex1yosys.sh  a8-ex2synth.sh  a9-ex2compile.sh  s1-hello-synth.sh  s2-gemv-synth.sh  vlsi-report-simplify.py
(+200 files in other folders)
